--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,9 @@
 
   <title>news_app</title>
   <link rel="manifest" href="manifest.json">
-  <style id="splash-screen-style">
+
+
+    <style id="splash-screen-style">
     html {
       height: 100%
     }
@@ -37,7 +39,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #42a5f5;
+      background-color: #ffffff;
       background-image: url("splash/img/light-background.png");
       background-size: 100% 100%;
     }
@@ -86,6 +88,13 @@
       position: absolute;
       bottom: 0;
       right: 0;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #000000;
+        background-image: url("splash/img/dark-background.png");
+      }
     }
   </style>
   <script id="splash-screen-script">
